added live preview links

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 
         <div class="overlay"></div>
       </div>
+
       <div class="home-img">
         <img src="assets/coding.png" alt="my picture" />
       </div>
@@ -259,9 +260,11 @@
             </ul>
 
             <div class="btn-box">
-              <a href="#" class="btn own"
-                >Live Preview <i class="bx bx-link-external"></i
-              ></a>
+              <a
+                href="https://sizelenkosim.github.io/Landing-page/"
+                class="btn own"
+                >Live Preview <i class="bx bx-link-external"></i>
+              </a>
             </div>
           </div>
         </div>
@@ -311,9 +314,11 @@
             </ul>
 
             <div class="btn-box">
-              <a href="#" class="btn"
-                >Live Preview <i class="bx bx-link-external"></i
-              ></a>
+              <a
+                href="https://sizelenkosim.github.io/Scientific-Calcilator/"
+                class="btn"
+                >Live Preview <i class="bx bx-link-external"></i>
+              </a>
             </div>
           </div>
         </div>
